--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,9 @@
 require:
   - rubocop-rails
 
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 AllCops:
   TargetRubyVersion: 2.5
   Exclude:
